[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/DeckBuilder/SearchResult.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SilverLesserCounter.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/DeckBuilder/CopyCount.gd" type="Script" id=3]
[ext_resource path="res://Textures/UI/DeckBuilder/CardCounterBacklightCompressed.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="SearchResult" type="Node2D"]
script = ExtResource( 1 )

[node name="Card" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizedSprite" type="Sprite" parent="Card"]

[node name="SelectButton" type="TouchScreenButton" parent="Card"]
position = Vector2( -70, -105 )
scale = Vector2( 7, 10.5 )
shape = SubResource( 1 )

[node name="CopyCount" type="Control" parent="."]
visible = false
margin_top = 52.5
margin_bottom = 52.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backlight" type="Sprite" parent="CopyCount"]
texture = ExtResource( 4 )

[node name="Count" type="Label" parent="CopyCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -79.0
margin_right = 69.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "200"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Card/SelectButton" to="." method="_on_SelectButton_pressed"]
